Fix HEX Number Output Bug

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Tue Feb 25 13:19:35 ICT 2025
+#Tue Mar 04 19:13:35 ICT 2025
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\ATmega_DFP\\3.1.264
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.50\\bin
-host.id=0
+host.id=roh1-6750-t
 default.platformTool.md5=null
 configurations-xml=4202862d34bd2c88f28f1180a2164341
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
