RTOS_NoUp and NoRTOS Compare complete and complied

--- a/No_RTOS.X/nbproject/Makefile-genesis.properties
+++ b/No_RTOS.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Apr 25 15:16:44 ICT 2025
+#Mon Apr 28 20:17:44 ICT 2025
 default.languagetoolchain.version=2.50
-default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\ATmega_DFP\\3.1.264
+default.Pack.dfplocation=C\:\\Users\\Sirapob-ASUSTUF\\.mchp_packs\\Microchip\\ATmega_DFP\\3.3.279
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.50\\bin
 host.id=roh1-6750-t
 default.platformTool.md5=null
-configurations-xml=88feeaa8842e8b1b64f4f29e19c43bfd
+configurations-xml=a2229f1f645184dbaa4452f0c873375b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=bf89cdcdd6c0a49174fe4b605ef2b42d
-proj.dir=C\:\\Users\\Sirapob-ASUSTUF\\MPLABXProjects\\RTOS_NoUpload.X
+proj.dir=C\:\\Users\\Sirapob-ASUSTUF\\MPLABXProjects\\No_RTOS.X
 host.platform=windows
